--- a/config.properties
+++ b/config.properties
@@ -1,2 +1,2 @@
 # POM Explorer configuration
-#defaultMavenSettingsFile=C:\documents\repos\hexa.tools
+defaultMavenSettingsFile=/home/maxime.picque/mirakl/outils/apache-maven-3.6.3/conf/settings.xml
