--- a/pom-explorer/pom.xml
+++ b/pom-explorer/pom.xml
@@ -9,7 +9,7 @@
 		<version>1.4-SNAPSHOT</version>
 	</parent>
 	
-	<artifactId>pom-explorer</artifactId>
+	<artifactId>pom-explorer-app</artifactId>
 	
 	<packaging>jar</packaging>
 	
@@ -21,9 +21,6 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
-		<aetherVersion>1.0.0.v20140518</aetherVersion>
-		<mavenVersion>3.1.0</mavenVersion>
-		<wagonVersion>1.0</wagonVersion>
 		<version.io.undertow>1.4.15.Final</version.io.undertow>
 	</properties>
 	
@@ -132,6 +129,24 @@
 					</execution>
 				</executions>
 			</plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>add-source</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>target/generated-sources/annotations</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 		<resources>
 			<resource>
